# SatelliteMapper

./: .gitignore  README.md  pyproject.toml
src/satellitetranslate/: AttentionBlock.py  ConditionalInstanceNorm2d.py  DiscriminatorConfig.py  DownsamplingBlock.py  Landsat8Discriminator.py  LandsatToSentinelGenerator.py  ResidualBlock.py  ResidualDiscriminatorBlock.py  Sentinel2Discriminator.py  SentinelToLandsatGenerator.py  SpectralResponseLayer.py  UpsamplingBlock.py  generatorconfig.py  test_discriminator.py  test_generator.py  test_landsat8_discriminator.py  test_model.py  test_sentinel_to_landsat_generator.py  train.py
src/satellitetranslate/dataset/: calculate_dataset_stats.py  clean_sentinel2_files.py  collect_pair.py  crop_swir1_swir2.py  dataloader.py  get_data.py  get_data_landsat8.py  get_data_sentinel2.py  prepare_data.py  preprocess_data.py  split_train_val_test.py  stats.py  test_code.py  viz.py
src/satellitetranslate/utils/: landsat8_rsr.py  sentinel_rsr.py
stats/: landsat8_statistics.json  sentinel2_statistics.json
stats/summary/: landsat8_statistics.csv  sentinel2_statistics.csv
